fix for bug 123388 - FTP should accept CR line endings, r=dougt@netscape.com, sr=darin@netscape.com